# denotary-db-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
denotary_db_agent/: __main__.py  canonical.py  checkpoint_store.py  cli.py  config.py  diagnostics_snapshots.py  engine.py  models.py  pipeline.py  source_runtime.py  transport.py
deploy/: docker-compose.example.yml
docs/: adapter-separation-architecture.md  architecture.md  cassandra-config-reference.md  config-reference.md  db2-config-reference.md  denotary-env-file-runbook.md  denotary-postgresql-rollout-checklist.md  denotary-postgresql-validation-report.md  denotary-service-config-reference.md  denotary-wave1-mainnet-validation-report.md  deployment-guide.md  elasticsearch-config-reference.md  jungle4-postgresql-short-soak-report.md  jungle4-postgresql-soak-runbook.md  mariadb-config-reference.md  mongodb-config-reference.md  mysql-config-reference.md  operator-guide.md  oracle-config-reference.md  postgresql-config-reference.md  postgresql-hot-key-rotation.md  postgresql-recovery-scenarios.md  redis-config-reference.md  scylladb-config-reference.md  security-baseline.md  security-minimal-roadmap.md  snowflake-config-reference.md  sqlite-config-reference.md  sqlserver-config-reference.md  storage-config-reference.md  supported-databases.md  verifbill-permission-commands.md  verifbill-permission-model.md  wave-readiness-summary.md  wave-rollout-pack.md  wave1-long-soak-validation-report.md  wave1-long-soak-validation.md  wave1-mainnet-service-outage-validation-report.md  wave1-readiness-matrix.md  (+44 more)
(+197 files in other folders)
