[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "denotary-db-agent"
version = "0.1.0"
description = "Sidecar CDC agent for sending canonical database change events into deNotary enterprise anchoring flow."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
  { name = "BlockZero DOO" }
]
dependencies = [
  "psycopg[binary]>=3.1,<4",
  "PyMySQL>=1,<2",
  "mysql-replication>=1,<2",
  "pymongo>=4,<5",
  "python-tds>=1.16,<2",
  "oracledb>=2,<3",
  "eosapi==1.0.2"
]

[project.scripts]
denotary-db-agent = "denotary_db_agent.cli:main"

[tool.setuptools.packages.find]
include = ["denotary_db_agent*"]
